--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -234,3 +234,6 @@ button {
     }
   }
 }
+.react-reveal {
+  display: inline;
+}
